# diagonal_inequality

./: .gitignore  11 - RWD global_DB.docx  LICENSE  README.md  pyproject.toml  requirements.txt  run_analysis.py  ~$ - RWD global_DB.docx
data/processed/: Afghanistan.csv  Albania.csv  Belize.csv  Benin.csv  Burkina Faso.csv  Central African Republic.csv  Congo.csv  Cuba.csv  Côte d’Ivoire.csv  Ethiopia.csv  Gabon.csv  Gambia.csv  Georgia.csv  Ghana.csv  Guatemala.csv  Guinea-Bissau.csv  Guinea.csv  Guyana.csv  Honduras.csv  Jordan.csv  Kazakhstan.csv  Kyrgyzstan.csv  Lao PDR.csv  Malawi.csv  Mali.csv  Nepal.csv  Nigeria.csv  North Macedonia.csv  Paraguay.csv  Senegal.csv  Serbia.csv  Sierra Leone.csv  South Africa.csv  Suriname.csv  Togo.csv
results/graphs/: 01.1_ethnic_wealth_gaps_(max).tiff  01.2_ethnic_wealth_gaps_(avg).tiff  01.3_ethnic_wealth_gaps_(gini).tiff  02.10_spine_plot_Cuba.tiff  02.11_spine_plot_Côte_d'Ivoire.tiff  02.12_spine_plot_Ethiopia.tiff  02.13_spine_plot_Gabon.tiff  02.14_spine_plot_Gambia.tiff  02.15_spine_plot_Georgia.tiff  02.16_spine_plot_Ghana.tiff  02.17_spine_plot_Guatemala.tiff  02.18_spine_plot_Guinea.tiff  02.19_spine_plot_Guinea-Bissau.tiff  02.1_spine_plot_Afghanistan.tiff  02.20_spine_plot_Guyana.tiff  02.21_spine_plot_Honduras.tiff  02.22_spine_plot_Jordan.tiff  02.23_spine_plot_Kazakhstan.tiff  02.24_spine_plot_Kenya.tiff  02.25_spine_plot_Kyrgyzstan.tiff  02.26_spine_plot_Lao_PDR.tiff  02.27_spine_plot_Malawi.tiff  02.28_spine_plot_Mali.tiff  02.29_spine_plot_Nepal.tiff  02.2_spine_plot_Albania.tiff  02.30_spine_plot_Nigeria.tiff  (+55 more)
(+214 files in other folders)
