[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "racial_structure_of_poverty"
version = "0.1.0"
description = "Analysis pipeline for wealth-by-ethnicity research"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]